# spidermedic

./: .gitignore  CNAME  Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: ci.yml  docs.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: action.mdx  cli.mdx
src/: cli.rs  crawler.rs  extractor.rs  lib.rs  logger.rs  main.rs  reporter.rs
tests/: crawler_test.rs
