[package]
name = "spidermedic"
version = "0.2.0"
edition = "2021"
description = "A CLI tool for validating pages while crawling a website."
license = "MIT"

[lib]
name = "spidermedic"
path = "src/lib.rs"

[[bin]]
name = "spidermedic"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["rustls-tls"] }
scraper    = "0.21"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
csv        = "1"
colored    = "2"
url        = "2"

[dev-dependencies]
wiremock = "0.6"
