[package]
name = "spidermedic"
version = "0.2.0"
edition = "2024"
description = "A CLI tool for validating pages while crawling a website."
license = "MIT"

[lib]
name = "spidermedic"
path = "src/lib.rs"

[[bin]]
name = "spidermedic"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.13", features = ["rustls"] }
scraper    = "0.25"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
csv        = "1"
colored    = "3"
url        = "2"

[dev-dependencies]
wiremock = "0.6"
